--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@storybook/cli": "^6.0.26",
     "@storybook/react": "^5.3.21",
     "@types/jest": "^25.1.4",
+    "@types/ramda": "^0.27.6",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
@@ -70,6 +71,7 @@
   },
   "dependencies": {
     "@types/enzyme": "^3.10.7",
+    "ramda": "^0.27.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   }
