--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.9.0",
+    "@emotion/jest": "^11.1.0",
     "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-knobs": "^5.3.18",
     "@storybook/addon-links": "^5.3.18",
@@ -48,6 +49,7 @@
     "@types/ramda": "^0.27.6",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "babel-jest": "^25.2.4",
@@ -61,6 +63,7 @@
     "html-webpack-plugin": "^4.0.3",
     "husky": "^4.2.3",
     "jest": "^25.2.4",
+    "jest-emotion": "^10.0.32",
     "loki": "^0.20.3",
     "prettier": "^2.0.2",
     "ts-node": "^8.8.2",
@@ -71,8 +74,9 @@
   },
   "dependencies": {
     "@types/enzyme": "^3.10.7",
-    "ramda": "^0.27.0",
+    "ramda": "^0.27.1",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0"
   }
 }
