--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "types/*": ["src/types/*"],
+      "components/*": ["src/components/*"],
+      "@/*": ["src/*"]
+    },
     "target": "es5",
     "module": "commonjs",
     "allowJs": true,
