--- a/.github/workflows/codesandboxDeploy.yml
+++ b/.github/workflows/codesandboxDeploy.yml
@@ -2,9 +2,9 @@ name: Add codesandbox link
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   codesandbox-comment:
