--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "ramda": "^0.27.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5"
   }
 }
