--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
+    "@types/redux-mock-store": "^1.0.2",
     "babel-jest": "^25.2.4",
     "babel-loader": "^8.1.0",
     "enzyme": "^3.11.0",
@@ -66,6 +67,7 @@
     "jest-emotion": "^10.0.32",
     "loki": "^0.20.3",
     "prettier": "^2.0.2",
+    "redux-mock-store": "^1.5.4",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
@@ -74,6 +76,7 @@
   },
   "dependencies": {
     "@types/enzyme": "^3.10.7",
+    "@types/react-redux": "^7.1.16",
     "css-loader": "^5.0.1",
     "ramda": "^0.27.1",
     "react": "^16.14.0",
