--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "@types/enzyme": "^3.10.7",
     "@types/react-redux": "^7.1.16",
+    "@types/redux-logger": "^3.0.8",
     "css-loader": "^5.0.1",
     "ramda": "^0.27.1",
     "react": "^16.14.0",
@@ -85,6 +86,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^2.0.0"
   }
 }
