--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     "@storybook/cli": "^6.0.26",
     "@storybook/react": "^5.3.21",
     "@types/jest": "^25.1.4",
-    "@types/ramda": "^0.27.6",
+    "@types/ramda": "^0.27.36",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/redux-mock-store": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
-    "@types/redux-mock-store": "^1.0.2",
     "babel-jest": "^25.2.4",
     "babel-loader": "^8.1.0",
     "enzyme": "^3.11.0",
@@ -87,6 +87,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "style-loader": "^2.0.0"
   }
