--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "loki": "^0.20.3",
     "prettier": "^2.0.2",
     "redux-mock-store": "^1.5.4",
+    "redux-saga-test-plan": "^4.0.1",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
