--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "jsx": "react",
     "sourceMap": true,
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "downlevelIteration": true,
   }
 }
