--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/cli": "^6.0.26",
     "@storybook/react": "^5.3.21",
+    "@stryker-mutator/core": "^4.4.1",
+    "@stryker-mutator/jest-runner": "^4.4.1",
     "@types/jest": "^25.1.4",
     "@types/ramda": "^0.27.36",
     "@types/react": "^16.9.53",
