--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.20.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.0.3",
     "husky": "^4.2.3",
     "jest": "^25.2.4",
@@ -73,6 +74,7 @@
     "redux-saga-test-plan": "^4.0.1",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3",
+    "url-loader": "^4.1.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
