--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "redux-undo": "^1.0.1",
     "style-loader": "^2.0.0"
   }
 }
